# full-metal-engine

./: .gitignore  CMakeLists.txt  README.md
include/: context.h  engine.h  error.h  global_variable.h  state_type.h
src/: context.c  engine.c  glfw_error.c  global_variable.c  main.c  vulkan_error.c
